--- a/index.html
+++ b/index.html
@@ -5,64 +5,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
+
   <body>
     <!--navigation-->
-
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li> 
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header">
+      <nav class="header-navigation">
+        <a class="header-title link" href="./portfolio.html"
+          >Web <span class="header-title-link-two">Studio</span>  </a
+        >
+        <ul class="header-list list">
+          <li><a class="header-link link nav-link current  " href="./index.html">Studio</a></li>
+          <li><a class="header-link link nav-link  " href="./portfolio.html">Portfolio</a></li>
+          <li><a class="header-link link nav-link " href="">Contacts</a></li>
         </ul>
       </nav>
       <!--Adress-->
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="adress">
+        <ul class="adress-list list">
+          <li class="adress-item link">
+            <a  class="adress-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="adress-item">
+            <a class="adress-tel link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
         </ul>
       </address>
     </header>
     <main>
       <!--Section1-->
-      <section>
-        <h1>
-          Effective Solutions 
-          for Your Business
-        </h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-text">Effective Solutions <br>  for Your Business</h1>
+        <button class="hero-btn" type="button">Order Service</button>
       </section>
       <!--Section2-->
-      <section>
+      <section class="features">
         <h2>Our strategy</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+        <ul class="features-list">
+          <li class="features-item">
+            <h3 class="features-title">Strategy</h3>
+            <p class="features-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-title">Punctuality</h3>
+            <p class="features-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-title">Diligence</h3>
+            <p class="features-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-title">Technologies</h3>
+            <p class="features-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -70,24 +81,24 @@
         </ul>
       </section>
       <!--Section3-->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
+      <section class="work-examples">
+        <h2 class="work-examples-title">What are we doing</h2>
+        <ul class="work-examples-list list ">
+          <li class="work-examples-item">
             <img
               src="./images/rectangle7.jpg"
               width="360"
               alt="image computer version"
             />
           </li>
-          <li>
+          <li class="work-examples-item">
             <img
               src="./images/rectangle8.jpg"
               width="360"
               alt="image applications"
             />
           </li>
-          <li>
+          <li class="work-examples-item">
             <img
               src="./images/rectangle9.jpg"
               width="360"
@@ -97,36 +108,39 @@
         </ul>
       </section>
       <!--Section4-->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="Team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list list">
+          <li class="team-item">
             <img src="./images/mark.jpg" width="264" alt="photo Mark" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-pretext">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/tom.jpg" width="264" alt="photo Tom" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-pretext">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/camila.jpg" width="264" alt="photo Camila" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-pretext">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/daniel.jpg" width="264" alt="photo Daniel" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-pretext">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Footer-->
-    <footer>
-    <a href="./index.html">WebStudio</a>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+      <a class="footer-link link " href="./portfolio.html">Web  <span class="footer-link-two">Studio</span></a>
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing  growth solutions.
+      </p>
     </footer>
   </body>
 </html>
