--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <!--navigation-->
     <header class="header">
       <nav class="header-navigation">
-        <a class="header-title link" href="./portfolio.html"
-          >Web <span class="header-title-link-two">Studio</span>  </a
+        <a class="logo link" href="./portfolio.html"
+          >Web <span class="logo-header">Studio</span>  </a
         >
         <ul class="header-list list">
           <li><a class="header-link link nav-link current  " href="./index.html">Studio</a></li>
@@ -31,7 +31,7 @@
       <address class="adress">
         <ul class="adress-list list">
           <li class="adress-item link">
-            <a  class="adress-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a  class="adress-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="adress-item">
             <a class="adress-tel link" href="tel:+110001111111"
@@ -49,7 +49,7 @@
       <!--Section2-->
       <section class="features">
         <h2>Our strategy</h2>
-        <ul class="features-list">
+        <ul class="features-list list ">
           <li class="features-item">
             <h3 class="features-title">Strategy</h3>
             <p class="features-text">
@@ -136,7 +136,7 @@
     </main>
     <!--Footer-->
     <footer class="footer">
-      <a class="footer-link link " href="./portfolio.html">Web  <span class="footer-link-two">Studio</span></a>
+      <a class="logo link " href="./portfolio.html">Web  <span class="logo-footer">Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing  growth solutions.
