--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,8 +19,8 @@
 
     <header class="header">
       <nav class="header-navigation">
-        <a class="header-title link" href="./index.html"
-          >Web <span class="header-title-link-two">Studio</span></a
+        <a class="logo link" href="./index.html"
+          >Web <span class="logo-header">Studio</span></a
         >
         <ul class="header-list list">
           <li class="header-item">
@@ -162,8 +162,8 @@
     </main>
     <!--Footer-->
     <footer class="footer">
-      <a class="footer-link link" href="./index.html"
-        >Web <span class="footer-link-two">Studio</span></a
+      <a class="logo link" href="./index.html"
+        >Web <span class="logo-footer">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
